samples/_failures_safe/1761457542_afef42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17e974f8.c: In function ‘determinant_matrix’:
./samples/SAFE/__tmp_17e974f8.c:135:9: error: expected expression at end of input
  135 |         if (det >
      |         ^~
./samples/SAFE/__tmp_17e974f8.c:135:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_17e974f8.c:135:9: error: expected declaration or statement at end of input
